# barrustenburg

./: .gitignore  Cargo.toml  pkg6_test_audit.md  test_audit_report.md  validation_report.md
.beads/: issues.jsonl
crates/circuit_builder/: Cargo.toml
crates/commitment_schemes/: Cargo.toml
crates/commitment_schemes/src/: batch_mul.rs  claim.rs  claim_batcher.rs  commitment_key.rs  ipa.rs  kzg.rs  lib.rs  pairing_points.rs  tests.rs  verification_key.rs
crates/commitment_schemes/src/gemini/: mod.rs  tests.rs
crates/commitment_schemes/src/shplonk/: mod.rs  shplemini.rs  tests.rs
crates/commitment_schemes/src/small_subgroup_ipa/: mod.rs  tests.rs
crates/crypto/: Cargo.toml
crates/ecc/: Cargo.toml
crates/flavor/: Cargo.toml
crates/honk/: Cargo.toml
crates/numeric/: Cargo.toml
crates/polynomials/: Cargo.toml
crates/relations/: Cargo.toml
crates/srs/: Cargo.toml
crates/stdlib/: Cargo.toml
crates/stdlib/src/: chonk_verifier.rs  eccvm_verifier.rs  goblin_verifier.rs  honk_verifier.rs  lib.rs  translator_vm_verifier.rs
crates/stdlib/src/encryption/: aes128.rs  ecdsa.rs  mod.rs
crates/stdlib/src/hash/: blake2s.rs  blake3s.rs  keccak.rs  mod.rs  poseidon2.rs  sha256.rs
crates/stdlib/src/primitives/: bigfield.rs  biggroup.rs  bool.rs  byte_array.rs  field.rs  logic.rs  mod.rs  plookup.rs  safe_uint.rs  witness.rs
crates/stdlib/src/primitives/group/: cycle_group.rs  cycle_scalar.rs  mod.rs  straus_lookup_table.rs  straus_scalar_slice.rs  tests.rs
crates/stdlib/src/primitives/memory/: mod.rs  ram_table.rs  rom_table.rs  twin_rom_table.rs
crates/sumcheck/: Cargo.toml
crates/transcript/: Cargo.toml
crates/ultra_honk/: Cargo.toml
crates/ultra_honk/src/: e2e_tests.rs  lib.rs  oink_prover.rs  oink_verifier.rs  proving_key.rs  ultra_prover.rs  ultra_sumcheck.rs  ultra_verifier.rs  validation_tests.rs  verification_key.rs
docs/: dependency-graph.md  ecc-todo.md  memory-log.md  porting-log.md  rewrite-assessment.md
src/: lib.rs
src/crypto/: ecdsa.rs  hashers.rs  hmac.rs  mod.rs  schnorr.rs
src/ecc/: batched_affine_addition.rs  mod.rs  scalar_multiplication.rs  tests.rs
src/numeric/: uintx.rs
src/polynomials/: barycentric.rs  eq_polynomial.rs  evaluation_domain.rs  gate_separator.rs  mod.rs  polynomial.rs  polynomial_arithmetic.rs  polynomial_span.rs  row_disabling_polynomial.rs  shared_shifted_virtual_zeroes_array.rs  tests.rs  univariate.rs  univariate_coefficient_basis.rs
(+147 files in other folders)
