[package]
name = "barrustenburg"
version = "0.1.0"
edition = "2024"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
crypto-bigint = "0.6"
rand = "0.9"
blake3 = { version = "1", default-features = false }

[lib]
name = "barrustenburg"
path = "src/lib.rs"

[[bin]]
name = "barrustenburg"
path = "src/main.rs"
