[package]
name = "barrustenburg"
version = "0.1.0"
edition = "2024"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
crypto-bigint = "0.6"
rand = "0.9"
blake3 = { version = "1", default-features = false }
blake2 = "0.10"
sha2 = { version = "0.10", features = ["compress"] }
aes = "0.8"
cbc = "0.1"

[dev-dependencies]
paste = "1"

[lib]
name = "barrustenburg"
path = "src/lib.rs"

[[bin]]
name = "barrustenburg"
path = "src/main.rs"
